# poe2-pickit-generator

./: .gitignore  AI_CONSTITUTION.md  BUILD_EXE.bat  CHANGELOG.md  CLAUDE.md  DECISIONS.md  LICENSE  README.md  build.exe.bat  build_rare_gear_catalog.py  game_data.json  pickit_assembly.py  poe2_pickit_generator.py  poe2_pickit_gui.py  pyproject.toml  rare_gear_catalog.py  rare_gear_templates.py  requirements.txt  scratch_app.js  scratch_logo.txt  tab_chance_bases.py  tab_craft_bases.py  tab_rare_gear.py  test_assembly.py  test_generator.py  ui_common.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: CODEBASE_CLEANUP_REPORT.md  CODEBASE_STRUCTURE.md  index.html  rare-stat-menu.txt
poe2-pickit-qt/: ExileBot2PickitQt.spec  README.md  main.py  requirements.txt
price_cache/: Runes_of_Aldur__abyssal_bones.json  Runes_of_Aldur__catalysts.json  Runes_of_Aldur__currency.json  Runes_of_Aldur__essences.json  Runes_of_Aldur__expedition.json  Runes_of_Aldur__fragments.json  Runes_of_Aldur__idols.json  Runes_of_Aldur__lineage_support_gems.json  Runes_of_Aldur__liquid_emotions.json  Runes_of_Aldur__omens.json  Runes_of_Aldur__runes.json  Runes_of_Aldur__soul_cores.json  Runes_of_Aldur__uncut_gems.json  Runes_of_Aldur__unique_accessories.json  Runes_of_Aldur__unique_armours.json  Runes_of_Aldur__unique_charms.json  Runes_of_Aldur__unique_flasks.json  Runes_of_Aldur__unique_jewels.json  Runes_of_Aldur__unique_relics.json  Runes_of_Aldur__unique_weapons.json  Runes_of_Aldur__waystones.json  Standard__abyssal_bones.json  Standard__catalysts.json  Standard__currency.json  (+18 more)
(+128 files in other folders)
